CSS/indian_map.css
@import url('https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap');

* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #2E2E2E;
    background-repeat: no-repeat;
    background-attachment: fixed;
    height: 100vh;
    width: 100vw;
}

.baskervville-sc-regular {
    font-family: "Baskervville SC", serif;
    font-weight: 400;
    font-style: normal;
}

main {
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}

.map {
    position: relative;
    height: 100vh;
    width: 100%;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}

.container {
    position: absolute;
    top: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100%;
}

.description-box {
    cursor: pointer;
    pointer-events: none;
    color: #F4F1DE;
    font-size: 40px;
    font-weight: bold;
    position: absolute;
    width: 30%;
    padding: 10px;
    display: block;
    z-index: 100;
}

img {
    height: 50px;
    width: 50px;
    opacity: 0;
    transform-origin: bottom;
    transform: rotateZ(-180deg);
    animation: pop-up .3s ease forwards;
}

@keyframes pop-up {
    100% {
        opacity: 1;
        transform: rotateZ(0deg);
    }
}

svg path {
    stroke: transparent;
    position: relative;
    transition: transform 0.3s ease;
}

.path1-description {
    position: absolute;
    text-align: right;
    top: 25%;
    left: 12%;
}

.path2-description {
    position: absolute;
    top: 35%;
    left: 45%;
}

.path3-4-description {
    position: absolute;
    top: 30%;
    left: 62%;
    width: 30%;
}

.path5-description {
    position: absolute;
    top: 43%;
    left: 53%;
}

.path6-description {
    text-align: right;
    position: absolute;
    top: 52%;
    left: 12%;
}

.path7-description {
    position: absolute;
    top: 67%;
    left: 42%;
}

/* Media Queries for Responsiveness */
@media (max-width: 1200px) {
    .description-box {
        font-size: 35px;
        width: 35%;
    }

    .path1-description {
        top: 22%;
        left: 10%;
    }

    .path2-description {
        top: 32%;
        left: 42%;
    }

    .path3-4-description {
        top: 28%;
        left: 58%;
    }

    .path5-description {
        top: 40%;
        left: 50%;
    }

    .path6-description {
        top: 48%;
        left: 10%;
    }

    .path7-description {
        top: 63%;
        left: 40%;
    }
}

@media (max-width: 992px) {
    .description-box {
        font-size: 30px;
        width: 40%;
    }

    .path1-description {
        top: 20%;
        left: 8%;
    }

    .path2-description {
        top: 30%;
        left: 40%;
    }

    .path3-4-description {
        top: 26%;
        left: 55%;
    }

    .path5-description {
        top: 38%;
        left: 48%;
    }

    .path6-description {
        top: 45%;
        left: 8%;
    }

    .path7-description {
        top: 60%;
        left: 38%;
    }
}

@media (max-width: 768px) {
    .description-box {
        font-size: 25px;
        width: 50%;
    }

    .path1-description {
        top: 18%;
        left: 6%;
    }

    .path2-description {
        top: 28%;
        left: 38%;
    }

    .path3-4-description {
        top: 24%;
        left: 52%;
    }

    .path5-description {
        top: 36%;
        left: 46%;
    }

    .path6-description {
        top: 42%;
        left: 6%;
    }

    .path7-description {
        top: 57%;
        left: 36%;
    }
}

@media (max-width: 576px) {
    .description-box {
        font-size: 20px;
        width: 60%;
    }

    .path1-description {
        top: 16%;
        left: 4%;
    }

    .path2-description {
        top: 26%;
        left: 36%;
    }

    .path3-4-description {
        top: 22%;
        left: 50%;
    }

    .path5-description {
        top: 34%;
        left: 44%;
    }

    .path6-description {
        top: 40%;
        left: 4%;
    }

    .path7-description {
        top: 55%;
        left: 34%;
    }
}

